--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
+
 <body>
-    <h2 style="text-align: center; color: pink; justify-content: center;">Webside host</h2>
-    <h2 style="text-align: center; color: green; justify-content: center;">Webside Host Successfully</h2>
+    <nav>
+        <ul class="nav justify-content-center bg-success">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Link</a>
+            </li>
+          </ul>
+    </nav>
+    <div>
+        <h2 style="text-align: center; color: pink; justify-content: center;">Webside host</h2>
+        <h2 style="text-align: center; color: green; justify-content: center;">Webside Host Successfully</h2>
+    </div>
+   
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+
 </html>
