--- a/Other.html
+++ b/Other.html
@@ -24,7 +24,7 @@
     </nav>
     <div>
         <h2 style="text-align: center; color: pink; justify-content: center;">Webside host</h2>
-        <h2 style="text-align: center; color: green; justify-content: center;">Home Page</h2>
+        <h2 style="text-align: center; color: green; justify-content: center;">Other Page</h2>
     </div>
    
 </body>
