--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul class="nav justify-content-center bg-success">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active"  href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./Other.html">Other</a>
